--- a/firstWebForm.html
+++ b/firstWebForm.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="webform.css">
+    <title>First Web Form</title>
 </head>
 <body>
-    
+    <h1>My First Web Form</h1>
+    <form method="post" action="https://jkorpela.fi/cgi-bin/echo.cgi" target="cgi-results">
+        <fieldset>
+
+            <legend>Name Information:</legend>
+
+            <label for="firstName">First Name:</label>
+            <input type="text" id="firstName" placeholder="Input your first name" title="Input your first name" name="firstName"><br>
+            
+            <label for="lastName">Last Name:</label>
+            <input type="text" id="lastName" placeholder="Input your last name" title="Input your last name" name="lastName"><br>
+
+        </fieldset>
+
+        <fieldset>
+            <legend>Contact Infortmation:</legend>
+            <label for="email">Email:</label>
+            <input type="email" id="email" placeholder="Input your email address" title="Input your email address" name="email"><br>
+
+            <label for="telephone">Telephone:</label>
+            <input type="tel" id="telephone" placeholder="Input your cellphone number" title="Input your cellphone number" name="telephone"><br>
+
+        </fieldset>
+
+        <fieldset>
+            <legend>Birthday:</legend>
+            <label for="birthday">Birthday:</label>
+            <input type="date" id="birthday" title="Input your birthday" name="birthday"><br>
+        </fieldset>
+
+        <input class="submit" type="submit">
+    </form>
+
+    <iframe name="cgi-results" id="cgi-results"></iframe>
 </body>
 </html>
